# ardoise

./: .gitignore  Cargo.toml  README.md
resources/: .xprofile  ardoise.service  launch_ardoise.sh
src/: bcm_interface.rs  eink_interface.rs  imagery.rs  it8951.rs  main.rs
