[package]
name = "ardoise"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.0"
x11cap = "0.4.1"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
custom_error = "1.7.1"
image = "0.23.2"
rayon = "1.3.0"
clap = "2.33.0"







